2007-10-07 [colin]	3.0.2cvs26

	* src/prefs_toolbar.c
		Fix old icon being used when none is selected

2007-10-07 [colin]	3.0.2cvs25

	* src/toolbar.c
		Fix copy/paste error

2007-10-07 [colin]	3.0.2cvs24

	* src/prefs_toolbar.c
	* src/toolbar.c
	* src/toolbar.h
		Update icon to default one when changing event
		Make the icon chooser nicer (handle Esc, Enter,
		double-click)

2007-10-06 [colin]	3.0.2cvs23

	* src/prefs_toolbar.c
		Fix text reset; patch by Pawel

2007-10-06 [colin]	3.0.2cvs22

	* src/toolbar.h
		Complete previous commit

2007-10-06 [colin]	3.0.2cvs21

	* src/prefs_toolbar.c
	* src/toolbar.c
		Set toolbar text automatically to the default
		when changing Event executed on click

2007-10-06 [colin]	3.0.2cvs20

	* src/prefs_toolbar.c
		Invert Text and Event fields

2007-10-06 [colin]	3.0.2cvs19

	* src/prefs_toolbar.c
	* src/toolbar.c
		Make toolbar prefs look much better
		Patch by Pawel Pekala

2007-10-06 [paul]	3.0.2cvs18

	* src/account.c
	* src/prefs_filtering.c
		fix checkbuttons in gtktreeview on maemo by
		setting maemo's "allow-checkbox-mode" to FALSE

2007-10-06 [colin]	3.0.2cvs17

	* configure.ac
		Export -DSOLARIS in CFLAGS for all
		Solaris (not just 2.8) and OpenSolaris

2007-10-06 [paul]	3.0.2cvs16

	* AUTHORS
	* src/exporthtml.c
	* src/mbox.c
	* src/gtk/authors.h
		fix build on solaris where ctime_r takes
		3 arguments rather than 2.
		Patch by Nicolas Doualot <slubman.lists@slubman.info>

2007-10-05 [colin]	3.0.2cvs15

	* src/etpan/imap-thread.c
		Fix wrong error codepath

2007-10-05 [wwp]	3.0.2cvs14

	* src/filtering.c
		Fix unexpected logging of quicksearches:
		debug_filtering_session flag was never reset to FALSE, causing
		matcher functions to log when called from a quicksearch
		(if a filtering session happened before).

2007-10-05 [paul]	3.0.2cvs13

	* src/prefs_actions.c
	* src/prefs_filtering.c
	* src/prefs_template.c
		fix bug 1343, 'Filtering..'s close button
		silently discards new filter'
		Thanks to Colin
